# fresh-out-the-box

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD
content/assets/: particleatlas.yml  walking.yml
content/assets/menus/: button_atlas.aseprite  buttons.aseprite  buttons.yml
content/assets/tilesets/: test.yml
content/cards/: card.yml  cardatlas.yml  cardpack.yml
content/scenes/: scene1.yml  scene1_0.scene  scene1_1.scene
content/shaders/: fragment.glsl  vertex.glsl
src/core/: game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  logger.cpp  logger.hpp  menu.cpp  menu.hpp  resourcemanager.cpp  resourcemanager.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  spriterenderer.cpp  spriterenderer.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  window.cpp  window.hpp
src/core/renderer/: spriterenderer.cpp  spriterenderer.hpp  textureatlas.cpp  textureatlas.hpp
src/core/renderer/particle/: particle.cpp  particle.hpp  particleemitter.cpp  particleemitter.hpp
src/core/renderer/sprite/: animatedsprite.cpp  animatedsprite.hpp  sprite.cpp  sprite.hpp  staticsprite.cpp  staticsprite.hpp  textureatlas.cpp  textureatlas.hpp  uvinfo.hpp
src/game/: player.cpp  player.hpp  world.cpp  world.hpp
src/game/card/: card.cpp  card.hpp  cardloading.cpp  cardloading.hpp  cardpack.hpp
src/shaders/: fragment.glsl  vertex.glsl
